--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     </array>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="default_web_client_ide">68245960055-61dj6o7cv08h1vovvsrrdsjg37q4biq7.apps.googleusercontent.com</string>
 
 
 </resources>
