--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
 
     <array name="ld_activityScreenIcons">
         <item>@drawable/ic_home_outline_grey600_24dp</item>
-        <item>@drawable/ic_account_outline_grey600_24dp</item>
+        <item>@drawable/ubicacion</item>
         <item>@drawable/ic_account_outline_grey600_24dp</item>
         <item>@drawable/ic_account_outline_grey600_24dp</item>
         <item>@drawable/ic_cart_outline_grey600_24dp</item>
