--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,11 +17,11 @@
     <array name="ld_activityScreenIcons">
         <item>@drawable/ic_home_outline_grey600_24dp</item>
         <item>@drawable/ubicacion</item>
-        <item>@drawable/ic_account_outline_grey600_24dp</item>
+        <item>@drawable/expediente</item>
         <item>@drawable/factura</item>
         <item>@drawable/ic_account_outline_grey600_24dp</item>
-        <item>@drawable/ic_email_outline_grey600_24dp</item>
         <item>@drawable/ic_cart_outline_grey600_24dp</item>
+        <item>@drawable/ayuda</item>
         <item>@drawable/ic_logout_grey600_24dp</item>
         <item></item>
     </array>
